# LOOKA

./: README.md
Frontend/looka-app/: .gitignore  README.md  capacitor.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
Frontend/looka-app/src/: App.tsx  index.css
Frontend/looka-app/src-tauri/: Cargo.toml  tauri.conf.json
Frontend/looka-app/src/api/: auth.ts  client.ts  index.ts  orders.ts  products.ts  user.ts  wishes.ts
Frontend/looka-app/src/components/: Badge.tsx  Button.tsx  Card.tsx  Header.tsx  Icon.tsx  ImageWithStatus.tsx  Input.tsx  Layout.tsx  LukaAvatar.tsx  ProductCard.tsx  StatusBadge.tsx  TabBar.tsx  TaskQueueDialog.tsx  app-sidebar.tsx  breadcrumb.tsx  (+4 more)
Frontend/stitch_fashion_discovery_feed/order_&_production_status_1/: code.html
Frontend/stitch_fashion_discovery_feed/order_&_production_status_10/: code.html
Frontend/stitch_fashion_discovery_feed/order_&_production_status_2/: code.html
Frontend/stitch_fashion_discovery_feed/order_&_production_status_3/: code.html
Frontend/stitch_fashion_discovery_feed/order_&_production_status_4/: code.html
Frontend/stitch_fashion_discovery_feed/order_&_production_status_5/: code.html
Frontend/stitch_fashion_discovery_feed/order_&_production_status_6/: code.html
Frontend/stitch_fashion_discovery_feed/order_&_production_status_7/: code.html
Frontend/stitch_fashion_discovery_feed/order_&_production_status_8/: code.html
Frontend/stitch_fashion_discovery_feed/order_&_production_status_9/: code.html
plan/: canversation.md  canversation2.md  canversation3.md
(+193 files in other folders)
